2026/day-74/terraform/security_groups.tf
resource "aws_default_vpc" "server_vpc" { }


resource "aws_security_group" "server_sg" {
      name = "server_sg"
      vpc_id = aws_default_vpc.server_vpc.id
       
    ingress {
      from_port       = 22
      to_port         = 22
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
     
    ingress {
      from_port       = 80
      to_port         = 80
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
     
    ingress {
      from_port       = 443
      to_port         = 443
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
     
    ingress {
      from_port       = 8000
      to_port         = 8000
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
     
    ingress {
      from_port       = 9090
      to_port         = 9090
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }
     
    ingress {
      from_port       = 3000
      to_port         = 3000
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }


   ingress {
      from_port       = 9100
      to_port         = 9100
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }

  
   ingress {
      from_port       = 8080
      to_port         = 8080
      protocol        = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
  }



    egress {
      from_port       = 0
      to_port         = 0
      protocol        = "-1"
      cidr_blocks     = ["0.0.0.0/0"]
  }
    tags ={
        Name = "Task-74"
    }
 
}
